// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly prominence default 1`] = `
<DocumentFragment>
  .cache-13mawr1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-13mawr1 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly prominence strong 1`] = `
<DocumentFragment>
  .cache-1uu06zg {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #151a2d;
  background: #f6f6f8;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-1uu06zg egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size large 1`] = `
<DocumentFragment>
  .cache-cvos70 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 32px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-1b0uuur {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 14px;
}

.cache-1b0uuur.cache-1b0uuur {
  font-size: 14px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-cvos70 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-1b0uuur"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size medium 1`] = `
<DocumentFragment>
  .cache-13mawr1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-13mawr1 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size small 1`] = `
<DocumentFragment>
  .cache-on8h10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 8px;
  gap: 4px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 16px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-190v7s9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 10px;
}

.cache-190v7s9.cache-190v7s9 {
  font-size: 10px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-on8h10 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-190v7s9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant danger 1`] = `
<DocumentFragment>
  .cache-16b0q8g {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #dd3252;
  background: #ffe1e7;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="danger"
    as="span"
    class="cache-16b0q8g egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-ui6e47 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f6ed8;
  background: #e1ebff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="info"
    as="span"
    class="cache-ui6e47 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant neutral 1`] = `
<DocumentFragment>
  .cache-13mawr1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-13mawr1 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant primary 1`] = `
<DocumentFragment>
  .cache-1rg8p6z {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4f0599;
  background: #eeeeff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-1rg8p6z egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-1dg1vj0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #22c8a2;
  background: #eafffb;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="success"
    as="span"
    class="cache-1dg1vj0 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-mh6s2k {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ff8c69;
  background: #ffefe6;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="warning"
    as="span"
    class="cache-mh6s2k egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-13mawr1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-13mawr1 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;
